# regex-fa

./: .gitignore  CMakeLists.txt
git-hook/: pre-commit
include/regex-fa/: dfa.hpp  fa-graph.hpp  fa-include.hpp  nfa.hpp  regex-fa.hpp
test/: CMakeLists.txt
test/sources/: fa-generator.cpp  fa-generator.h  test.h
test/sources/dfa/: dfa-minimize.cpp  dfa-test.cpp
test/sources/fa-graph/: fa-graph-test.cpp
test/sources/nfa/: nfa-to-dfa.cpp
wasm/: CMakeLists.txt  main.cpp  wasm-build.bash
wasm/wasm-export/: CMakeLists.txt
wasm/wasm-export/include/wasm-export/: dfa-export.hpp  nfa-export.hpp  wasm-export-include.hpp
wasm/wasm-export/test/: CMakeLists.txt
wasm/wasm-export/test/sources/: test-dfa-export.cpp  test-nfa-export.cpp  test.h
wasm/wasm-export/test/sources/dfa-export/: test-dfa-export.cpp
